--- a/view/page/register/sent.html
+++ b/view/page/register/sent.html
@@ -120,7 +120,7 @@
         <small>{{ page['description'] }}</small>
     </h1>
     <ol class="breadcrumb">
-        <li><i class="fa fa-server"></i> Daftar Berkas</li>
+        <li><i class="fa fa-files-o" aria-hidden="true"></i> Tunggakan Berkas</li>
         <li class="active"> {{ page['title'] }}</li>
     </ol>
 </section>
