--- a/view/node/detailcompose.html
+++ b/view/node/detailcompose.html
@@ -30,9 +30,9 @@
             </div>
             <div class="col-sm-12">
                 <div class="table-responsive">
-                    <table class="table table-bordered">
+                    <table class="table table-bordered table-striped" role="grid">
                         <tbody>
-                            <tr>
+                            <tr class="bg-gray">
                                 <th class="text-center">Kode Billing</th>
                                 <th class="text-center">Biaya</th>
                                 <th class="text-center">NTPN</th>
@@ -63,9 +63,9 @@
             </div>
             <div class="col-sm-12">
                 <div class="table-responsive">
-                    <table class="table table-bordered">
+                    <table class="table table-bordered table-striped" role="grid">
                         <tbody>
-                            <tr>
+                            <tr class="bg-gray">
                                 <th class="text-center">Daftar Isian</th>
                                 <th class="text-center">Nomor</th>
                                 <th class="text-center">Tanggal</th>
@@ -91,9 +91,9 @@
             </div>
             <div class="col-sm-12">
                 <div class="table-responsive">
-                    <table class="table table-bordered">
+                    <table class="table table-bordered table-striped" role="grid">
                         <tbody>
-                            <tr>
+                            <tr class="bg-gray">
                                 <th style="display:none"></th>
                                 <th style="display:none"></th>
                                 <th class="text-center">Produk</th>
@@ -152,7 +152,7 @@
                 <div class="box-tools pull-right">
                     <button type="button" class="btn close" data-dismiss="modal" aria-label="Close"><i class="fa fa-times"></i></button>
                 </div>
-                <h4 class="modal-title"><i class="fa fa-envelope-o" aria-hidden="true"></i> New Register</h4>
+                <h4 class="modal-title"><i class="fa fa-envelope-o" aria-hidden="true"></i> Register Baru</h4>
             </div>
             <div class="modal-body">
                 <form class="form-horizontal" id="formSendMessange" method="PUT">
@@ -222,6 +222,8 @@
         </div>
     </div>
 </div>
+
+
 <script>
     $('#region').on('change', function () {
         $(this).valid();
