--- a/view/node/detailinbox.html
+++ b/view/node/detailinbox.html
@@ -54,9 +54,9 @@
             </div>
             <div class="col-sm-12">
                 <div class="table-responsive">
-                    <table class="table table-bordered">
+                    <table class="table table-bordered table-striped" role="grid">
                         <tbody>
-                            <tr>
+                            <tr class="bg-gray">
                                 <th class="text-center">Daftar Isian</th>
                                 <th class="text-center">Nomor</th>
                                 <th class="text-center">Tanggal</th>
@@ -66,8 +66,7 @@
                                 <tr>
                                     <td class="text-center">{{ d['typediid'] }}</td>
                                     <td class="text-center">{{ d['description'].split("-")[1].split(" No.")[1] }}</td>
-                                    <td class="text-center">{{ d['description'].split("-")[1].split(", ")[0].split("Tgl. ")[1] }}
-                                    </td>
+                                    <td class="text-center">{{ d['description'].split("-")[1].split(", ")[0].split("Tgl. ")[1] }}</td>
                                 </tr>
                                 {% end %}
                             {% end %}
@@ -82,9 +81,9 @@
             </div>
             <div class="col-sm-12">
                 <div class="table-responsive">
-                    <table class="table table-bordered">
+                    <table class="table table-bordered table-striped" role="grid">
                         <tbody>
-                            <tr>
+                            <tr class="bg-gray">
                                 <th style="display:none"></th>
                                 <th style="display:none"></th>
                                 <th class="text-center">Produk</th>
@@ -100,35 +99,30 @@
                                     <td class="text-center">SURAT TUGAS PENGUKURAN</td>
                                     <td class="text-center">{{ p['nomor'] }}</td>
                                     <td class="text-center">{{ p['wilayah'] }}</td>
-                                    </td>
                                     {% elif p['type'] == 'PERSIL' %}
                                     <td style="display:none">{{ p['documentid'] }}</td>
                                     <td style="display:none">{{ p['type'] }}</td>
                                     <td class="text-center">NIB</td>
                                     <td class="text-center">{{ p['nomor'] }}</td>
                                     <td class="text-center">{{ p['wilayah'] }}</td>
-                                    </td>
                                     {% elif p['type'] == 'GU' %}
                                     <td style="display:none">{{ p['documentid'] }}</td>
                                     <td style="display:none">{{ p['type'] }}</td>
                                     <td class="text-center">GAMBAR UKUR</td>
                                     <td class="text-center">{{ p['nomor'] }}</td>
                                     <td class="text-center">{{ p['wilayah'] }}</td>
-                                    </td>
                                     {% elif p['type'] == 'SU' %}
                                     <td style="display:none">{{ p['documentid'] }}</td>
                                     <td style="display:none">{{ p['type'] }}</td>
                                     <td class="text-center">SURAT UKUR</td>
                                     <td class="text-center">{{ p['nomor'] }}</td>
                                     <td class="text-center">{{ p['wilayah'] }}</td>
-                                    </td>
                                     {% elif p['type'] == 'HAK' %}
                                     <td style="display:none">{{ p['documentid'] }}</td>
                                     <td style="display:none">{{ p['type'] }}</td>
                                     <td class="text-center">BUKU TANAH</td>
                                     <td class="text-center">{{ p['nomor'] }}</td>
                                     <td class="text-center">{{ p['wilayah'] }}</td>
-                                    </td>
                                     {% end %}
                                 </tr>
                                 {% end %}
