--- a/view/node/detailcompose.html
+++ b/view/node/detailcompose.html
@@ -26,13 +26,13 @@
         </div>
         <div class="row">
             <div class="col-sm-12">
-                <h5> <strong>KODE BILLING:</strong> </h5>
+                <h4>KODE BILLING:</h4>
             </div>
             <div class="col-sm-12">
                 <div class="table-responsive">
-                    <table class="table table-bordered">
+                    <table class="table table-bordered table-striped">
                         <tbody>
-                            <tr>
+                            <tr class="bg-gray">
                                 <th class="text-center">Kode Billing</th>
                                 <th class="text-center">Biaya</th>
                                 <th class="text-center">NTPN</th>
@@ -59,13 +59,13 @@
         </div>
         <div class="row">
             <div class="col-sm-12">
-                <h5> <strong>DAFTAR ISIAN:</strong> </h5>
+                <h4>DAFTAR ISIAN:</h4>
             </div>
             <div class="col-sm-12">
                 <div class="table-responsive">
-                    <table class="table table-bordered">
+                    <table class="table table-bordered table-striped">
                         <tbody>
-                            <tr>
+                            <tr class="bg-gray">
                                 <th class="text-center">Daftar Isian</th>
                                 <th class="text-center">Nomor</th>
                                 <th class="text-center">Tanggal</th>
@@ -87,13 +87,13 @@
         </div>
         <div class="row">
             <div class="col-sm-12">
-                <h5> <strong>PRODUK:</strong> </h5>
+                <h4>PRODUK:</h4>
             </div>
             <div class="col-sm-12">
                 <div class="table-responsive">
-                    <table class="table table-bordered">
+                    <table class="table table-bordered table-striped">
                         <tbody>
-                            <tr>
+                            <tr class="bg-gray">
                                 <th style="display:none"></th>
                                 <th style="display:none"></th>
                                 <th class="text-center">Produk</th>
