--- a/view/node/detilberkasmasuk.html
+++ b/view/node/detilberkasmasuk.html
@@ -30,23 +30,23 @@
                     <table class="table table-bordered table-striped">
                         <tbody>
                             <tr>
-                                <td style="width: 30%;"><strong>Kantor :</strong><address>{{ office['nama'].upper() }}</address></td>
-                                <td style="width: 30%;"><strong>Pemohon Berkas :</strong><address>{{ pemohon['nama'] }} </address></td>
-                                <td style="width: 30%;"><strong>Email :</strong><address>{{ register['email'] }}</address></td>
+                                <td style="width: 30%;"><strong>Kantor :</strong><p>{{ office['nama'].upper() }}</p></td>
+                                <td style="width: 30%;"><strong>Pemohon Berkas :</strong><p>{{ pemohon['nama'] }} </p></td>
+                                <td style="width: 30%;"><strong>Email :</strong><p>{{ register['email'] }}</p></td>
                             </tr>
                             <tr>
-                                <td><strong>Nomor Berkas :</strong><address>{{ register['nomorberkas'] }} / {{ register['tahunberkas'] }}</address></td>
-                                <td><strong>Petugas Register Masuk :</strong><address>{{ register['userregisterinname'] }}</address></td>
-                                <td><strong>Status :</strong><address>{{ register['status'] }}</address></td>
+                                <td><strong>Nomor Berkas :</strong><p>{{ register['nomorberkas'] }} / {{ register['tahunberkas'] }}</p></td>
+                                <td><strong>Petugas Register Masuk :</strong><p>{{ register['userregisterinname'] }}</p></td>
+                                <td><strong>Status :</strong><p>{{ register['status'] }}</p></td>
                             </tr>
                             <tr>
-                                <td><strong>Kegiatan :</strong><address>{{ register['kegiatan'] }}, {{ register['prosedur'] }}</address></td>
-                                <td><strong>Tanggal Register</strong><address>Tgl. {{ register['userregisterindate'].strftime('%d/%m/%Y') }}</address></td>
-                                <td><strong>Keterangan :</strong><address>{% if 'keterangan' in register.keys() %}{{ register['keterangan'] }}{% end %}</address></td>
+                                <td><strong>Kegiatan :</strong><p>{{ register['kegiatan'] }}, {{ register['prosedur'] }}</p></td>
+                                <td><strong>Tanggal Register</strong><p>Tgl. {{ register['userregisterindate'].strftime('%d/%m/%Y') }}</p></td>
+                                <td><strong>Keterangan :</strong><p>{% if 'keterangan' in register.keys() %}{{ register['keterangan'] }}{% end %}</p></td>
                             </tr>
                             <tr>
-                                <td><strong>Region :</strong><address>KEC. {{ register['kecamatannama'] }}, DS/KEL.{{ register['desanama'] }}</address></td>
-                                <td><strong>Phone :</strong><address>{{ register['phone'] }}</address></td>
+                                <td><strong>Region :</strong><p>KEC. {{ register['kecamatannama'] }}, DS/KEL.{{ register['desanama'] }}</p></td>
+                                <td><strong>Phone :</strong><p>{{ register['phone'] }}</p></td>
                                 <td></td>
                             </tr>
                         </tbody>
@@ -54,120 +54,128 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-sm-12">
-                <h4>RIWAYAT:</h4>
-            </div>
-            <div class="col-sm-12">
-                <div class="table-responsive">
-                    <table class="table table-bordered table-striped">
-                        <tbody>
-                            <tr class="bg-gray">
-                                <th class="text-center">Pengirim</th>
-                                <th class="text-center"><i class="fa fa-exchange" aria-hidden="true"></i></th>
-                                <th class="text-center">Penerima</th>
-                            </tr>
-                            {% for r in riwayat %}
-                            <tr>
-                                <td class="text-center">{{ r['sendername'].upper() }} <br> {% if r['senderdate'] != None
-                                    %}{{r['senderdate'].strftime('%d/%m/%Y, %H:%M:%S') }} {% end %} </td>
-                                <td class="text-center">{{ r['messange'] }}</td>
-                                <td class="text-center">{{ r['recievename'].upper() }} <br> {% if r['recievedate'] != None %}
-                                    {{r['recievedate'].strftime('%d/%m/%Y, %H:%M:%S') }} {% end %} </td>
-                            </tr>
-                            {% end %}
-                        </tbody>
-                    </table>
+        <div class="nav-tabs-custom">
+            <ul class="nav nav-tabs">
+                <li class="active"><a href="#tbRiwayat" data-toggle="tab" aria-expanded="true">Riwayat</a></li>
+                <li class=""><a href="#tbDaftarIsian" data-toggle="tab" aria-expanded="false">Daftar Isian</a></li>
+                <li class=""><a href="#tbProduk" data-toggle="tab" aria-expanded="false">Produk</a></li>
+            </ul>
+
+            <div class="tab-content">
+                <!-- Riwayat -->
+                <div class="tab-pane active" id="tbRiwayat">
+                    {% for r in riwayat %}
+                    <div class="post">
+                        <form class="form-horizontal">
+                            <div class="user-block">
+                                <img class="img-circle img-bordered-sm" src="{{ static_url('img/unknown.png') }}" alt="user image">
+                                <span class="username">
+                                    <a href="#">{{ r['recievename'].upper() }}</a>
+                                </span>
+                                <span class="description">Tanggal Diterima - {% if r['recievedate'] != None %}{{r['recievedate'].strftime('%d/%m/%Y, %H:%M:%S') }} {% end %}</span>
+                            </div>
+                            <h5>
+                                {{ r['messange'] }}
+                            </h5>
+                            <ul class="list-inline">
+                                <li class="link-black text-sm">
+                                    <small>{{ r['sendername'].upper() }}<br>
+                                    Tgl.{% if r['senderdate'] != None %}{{r['senderdate'].strftime('%d/%m/%Y, %H:%M:%S') }} {% end %}</small>
+                                </li>
+                            </ul>
+                        </form>
+                    </div>
+                    {% end %}
                 </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-12">
-                <h4>DAFTAR ISIAN:</h4>
-            </div>
-            <div class="col-sm-12">
-                <div class="table-responsive">
-                    <table class="table table-bordered table-striped">
-                        <tbody>
-                            <tr class="bg-gray">
-                                <th class="text-center">Daftar Isian</th>
-                                <th class="text-center">Nomor</th>
-                                <th class="text-center">Tanggal</th>
-                            </tr>
-                            {% if register['daftarisian'] != None %}
-                                {% for d in register['daftarisian'] %}
-                                <tr>
-                                    <td class="text-center">{{ d['typediid'] }}</td>
-                                    <td class="text-center">{{ d['description'].split("-")[1].split(" No.")[1] }}</td>
-                                    <td class="text-center">{{ d['description'].split("-")[1].split(", ")[0].split("Tgl.")[1] }}
-                                    </td>
-                                </tr>
-                                {% end %}
-                            {% end %}
-                        </tbody>
-                    </table>
+                <!-- Daftar Isian -->
+                <div class="tab-pane" id="tbDaftarIsian">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <div class="table-responsive">
+                                <table class="table table-bordered table-striped">
+                                    <tbody>
+                                        <tr class="bg-gray">
+                                            <th class="text-center">Daftar Isian</th>
+                                            <th class="text-center">Nomor</th>
+                                            <th class="text-center">Tanggal</th>
+                                        </tr>
+                                        {% if register['daftarisian'] != None %}
+                                            {% for d in register['daftarisian'] %}
+                                            <tr>
+                                                <td class="text-center">{{ d['typediid'] }}</td>
+                                                <td class="text-center">{{ d['description'].split("-")[1].split(" No.")[1] }}</td>
+                                                <td class="text-center">{{ d['description'].split("-")[1].split(", ")[0].split("Tgl.")[1] }}
+                                                </td>
+                                            </tr>
+                                            {% end %}
+                                        {% end %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-12">
-                <h4>PRODUK:</h4>
-            </div>
-            <div class="col-sm-12">
-                <div class="table-responsive">
-                    <table class="table table-bordered table-striped">
-                        <tbody>
-                            <tr class="bg-gray">
-                                <th style="display:none"></th>
-                                <th style="display:none"></th>
-                                <th class="text-center">Produk</th>
-                                <th class="text-center">Nomor</th>
-                                <th class="text-center">Desa</th>
-                            </tr>
-                            {% if register['document'] != None %}
-                                {% for p in register['document'] %}
-                                <tr>
-                                    {% if p['type'] == 'STP' %}
-                                    <td style="display:none">{{ p['documentid'] }}</td>
-                                    <td style="display:none">{{ p['type'] }}</td>
-                                    <td class="text-center">SURAT TUGAS PENGUKURAN</td>
-                                    <td class="text-center">{{ p['nomor'] }}</td>
-                                    <td class="text-center">{{ p['wilayah'] }}</td>
-                                    </td>
-                                    {% elif p['type'] == 'PERSIL' %}
-                                    <td style="display:none">{{ p['documentid'] }}</td>
-                                    <td style="display:none">{{ p['type'] }}</td>
-                                    <td class="text-center">NIB</td>
-                                    <td class="text-center">{{ p['nomor'] }}</td>
-                                    <td class="text-center">{{ p['wilayah'] }}</td>
-                                    </td>
-                                    {% elif p['type'] == 'GU' %}
-                                    <td style="display:none">{{ p['documentid'] }}</td>
-                                    <td style="display:none">{{ p['type'] }}</td>
-                                    <td class="text-center">GAMBAR UKUR</td>
-                                    <td class="text-center">{{ p['nomor'] }}</td>
-                                    <td class="text-center">{{ p['wilayah'] }}</td>
-                                    </td>
-                                    {% elif p['type'] == 'SU' %}
-                                    <td style="display:none">{{ p['documentid'] }}</td>
-                                    <td style="display:none">{{ p['type'] }}</td>
-                                    <td class="text-center">SURAT UKUR</td>
-                                    <td class="text-center">{{ p['nomor'] }}</td>
-                                    <td class="text-center">{{ p['wilayah'] }}</td>
-                                    </td>
-                                    {% elif p['type'] == 'HAK' %}
-                                    <td style="display:none">{{ p['documentid'] }}</td>
-                                    <td style="display:none">{{ p['type'] }}</td>
-                                    <td class="text-center">BUKU TANAH</td>
-                                    <td class="text-center">{{ p['nomor'] }}</td>
-                                    <td class="text-center">{{ p['wilayah'] }}</td>
-                                    </td>
-                                    {% end %}
-                                </tr>
-                                {% end %}
-                            {% end %}
-                        </tbody>
-                    </table>
+                <!-- Produk -->
+                <div class="tab-pane" id="tbProduk">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <div class="table-responsive">
+                                <table class="table table-bordered table-striped">
+                                    <tbody>
+                                        <tr class="bg-gray">
+                                            <th style="display:none"></th>
+                                            <th style="display:none"></th>
+                                            <th class="text-center">Produk</th>
+                                            <th class="text-center">Nomor</th>
+                                            <th class="text-center">Desa</th>
+                                        </tr>
+                                        {% if register['document'] != None %}
+                                            {% for p in register['document'] %}
+                                            <tr>
+                                                {% if p['type'] == 'STP' %}
+                                                <td style="display:none">{{ p['documentid'] }}</td>
+                                                <td style="display:none">{{ p['type'] }}</td>
+                                                <td class="text-center">SURAT TUGAS PENGUKURAN</td>
+                                                <td class="text-center">{{ p['nomor'] }}</td>
+                                                <td class="text-center">{{ p['wilayah'] }}</td>
+                                                </td>
+                                                {% elif p['type'] == 'PERSIL' %}
+                                                <td style="display:none">{{ p['documentid'] }}</td>
+                                                <td style="display:none">{{ p['type'] }}</td>
+                                                <td class="text-center">NIB</td>
+                                                <td class="text-center">{{ p['nomor'] }}</td>
+                                                <td class="text-center">{{ p['wilayah'] }}</td>
+                                                </td>
+                                                {% elif p['type'] == 'GU' %}
+                                                <td style="display:none">{{ p['documentid'] }}</td>
+                                                <td style="display:none">{{ p['type'] }}</td>
+                                                <td class="text-center">GAMBAR UKUR</td>
+                                                <td class="text-center">{{ p['nomor'] }}</td>
+                                                <td class="text-center">{{ p['wilayah'] }}</td>
+                                                </td>
+                                                {% elif p['type'] == 'SU' %}
+                                                <td style="display:none">{{ p['documentid'] }}</td>
+                                                <td style="display:none">{{ p['type'] }}</td>
+                                                <td class="text-center">SURAT UKUR</td>
+                                                <td class="text-center">{{ p['nomor'] }}</td>
+                                                <td class="text-center">{{ p['wilayah'] }}</td>
+                                                </td>
+                                                {% elif p['type'] == 'HAK' %}
+                                                <td style="display:none">{{ p['documentid'] }}</td>
+                                                <td style="display:none">{{ p['type'] }}</td>
+                                                <td class="text-center">BUKU TANAH</td>
+                                                <td class="text-center">{{ p['nomor'] }}</td>
+                                                <td class="text-center">{{ p['wilayah'] }}</td>
+                                                </td>
+                                                {% end %}
+                                            </tr>
+                                            {% end %}
+                                        {% end %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
