--- a/view/index.html
+++ b/view/index.html
@@ -48,7 +48,7 @@ class="hold-transition skin-blue fixed sidebar-mini"
                             <!-- Menu Footer-->
                             <li class="user-footer">
                                 <div class="pull-left">
-                                    <a href="#" class="btn btn-default btn-flat">Profile</a>
+                                    <a href="/akun/profile" class="btn btn-default btn-flat">Profile</a>
                                 </div>
                                 <div class="pull-right">
                                     <a href="/logout" class="btn btn-default btn-flat">Sign out</a>
@@ -98,8 +98,8 @@ class="hold-transition skin-blue fixed sidebar-mini"
                         </span>
                     </a>
                     <ul class="treeview-menu">
-                        <li class=""><a href="#"><i class="fa fa-circle-o"></i>Profile</a></li>
-                        <li class=""><a href="#"><i class="fa fa-circle-o"></i>Ganti Password</a></li>
+                        <li class=""><a href="/akun/profile"><i class="fa fa-circle-o"></i>Profile</a></li>
+                        <li class=""><a href="/akun/gantipassword"><i class="fa fa-circle-o"></i>Ganti Password</a></li>
                     </ul>
                 </li>
 
