--- a/view/page/akun/ganti_password.html
+++ b/view/page/akun/ganti_password.html
@@ -29,7 +29,7 @@
 <script src="{{ static_url('vendor/bootstrap-notify-master/bootstrap-notify.js') }} }}"></script>
 <script src="{{ static_url('vendor/bootbox/bootbox.js') }}"></script>
 <script src="{{ static_url('js/init.js') }}"></script>
-<script src="{{ static_url('js/page/register/compose.js') }}"></script>
+<script src="{{ static_url('js/page/akun/gantipassword.js') }}"></script>
 <style>
     .error {
         color: #dd4b39 !important;
@@ -113,50 +113,39 @@
     <div class="box box-solid">
         <div class="box-body">
             {% module xsrf_form_html() %}
-            <form id="formProfile" method="POST" role="form">
-                <div class="row">
-                    <div class="col-sm-4">
-                        <div class="box-body box-profile">
-                            <img class="profile-user-img img-responsive img-circle" src="{{ static_url('img/unknown.png') }}" alt="User profile picture">
-                            <br>
-                            <div class="input-group">
-                                <label class="input-group-btn">
-                                    <span class="btn btn-primary">
-                                        Pilih Gambar… 
-                                        <input type="file" id="uploadFile" name="uploadFile" style="display: none;" multiple="">
-                                    </span>
-                                </label>
-                                <input type="text" class="form-control" readonly="">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-8">
-                        <div class="col-md-6 col-sm-6 col-xs-12 form-group">
-                            <label class="control-label" for="pegawaiid">Pegawai ID:</label>
-                            <input type="text" class="form-control" id="pegawaiid" name="pegawaiid" value="{{ useractived['pegawaiid'] }}" readonly>
-                        </div>
-                        <div class="col-md-6 col-sm-6 col-xs-12 form-group">
-                            <label class="control-label" for="username">Username:</label>
-                            <input type="text" class="form-control" id="username" name="username" value="{{ useractived['username'] }}" readonly>
-                        </div>
-                        <div class="col-md-12 col-sm-12 col-xs-12 form-group">
-                            <label class="control-label" for="nama">Nama:</label>
-                            <input type="text" class="form-control" id="nama" name="nama" value="{{ useractived['nama'] }}" readonly>
-                        </div>
-                        <div class="col-md-6 col-sm-6 col-xs-12 form-group">
-                            <label class="control-label" for="phone">Phone:</label>
-                            <input type="text" class="form-control" id="phone" name="phone" value="{{ useractived['phone'] }}">
-                        </div>
-                        <div class="col-md-6 col-sm-6 col-xs-12 form-group">
-                            <label class="control-label" for="email">Email:</label>
-                            <input type="text" class="form-control" id="email" name="email" value="{{ useractived['email'] }}">
-                        </div>
-                        <div class="form-group">
-                            <div class="col-md-9 col-sm-9 col-xs-12 col-md-offset-3">
-                                <div class="pull-right">
-                                    <button type="submit" id="btnSimpan" name="btnSimpan" class="btn btn-success btn-flat"><i class="fa fa-floppy-o" aria-hidden="true"></i> Simpan</button>
-                                </div>
-                            </div>
+            <form id="formGantiPassword" method="POST" role="form">
+                <input type="hidden" name="userid" value="{{ useractived['_id'] }}">
+                <div class="col-sm-12 form-group">
+                    <label class="control-label" for="passwordlama">Password Lama:</label>
+                    <input type="password" class="form-control" id="passwordlama" name="passwordlama">
+                </div>
+                <div class="col-sm-12 form-group">
+                    <label class="control-label"><input type="checkbox" id="tmplpasswordlama">
+                        <span> Tampilkan Password</span>
+                    </label>
+                </div>
+                <div class="col-sm-12 form-group">
+                    <label class="control-label" for="passwordbaru">Password Baru:</label>
+                    <input type="password" class="form-control" id="passwordbaru" name="passwordbaru">
+                </div>
+                <div class="col-sm-12 form-group">
+                    <label class="control-label"><input type="checkbox" id="tmplpasswordbaru">
+                        <span> Tampilkan Password</span>
+                    </label>
+                </div>
+                <div class="col-sm-12 form-group">
+                    <label class="control-label" for="ulangpasswordbaru">Ulangi Password Baru:</label>
+                    <input type="password" class="form-control" id="ulangpasswordbaru" name="ulangpasswordbaru">
+                </div>
+                <div class="col-sm-12 form-group">
+                    <label class="control-label"><input type="checkbox" id="tmplulangpasswordbaru">
+                        <span> Tampilkan Password</span>
+                    </label>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-9 col-sm-9 col-xs-12 col-md-offset-3">
+                        <div class="pull-right">
+                            <button type="submit" id="btnSimpan" name="btnSimpan" class="btn btn-success btn-flat"><i class="fa fa-floppy-o" aria-hidden="true"></i> Simpan</button>
                         </div>
                     </div>
                 </div>
