--- a/view/page/akun/profile.html
+++ b/view/page/akun/profile.html
@@ -29,7 +29,7 @@
 <script src="{{ static_url('vendor/bootstrap-notify-master/bootstrap-notify.js') }} }}"></script>
 <script src="{{ static_url('vendor/bootbox/bootbox.js') }}"></script>
 <script src="{{ static_url('js/init.js') }}"></script>
-<script src="{{ static_url('js/page/register/compose.js') }}"></script>
+<script src="{{ static_url('js/page/akun/profile.js') }}"></script>
 <style>
     .error {
         color: #dd4b39 !important;
